--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>TSHLA.ai</title>
+  <title>Login | TSHLA.ai</title>
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
@@ -20,27 +20,45 @@
       height: 100vh;
       text-shadow: 0 0 10px rgba(0,0,0,0.7);
     }
-    h1 {
-      font-size: 3rem;
+    h2 {
       margin-bottom: 1rem;
+      font-size: 2rem;
     }
-    a.button {
-      padding: 0.75rem 2rem;
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      background: rgba(0,0,0,0.4);
+      padding: 2rem;
+      border-radius: 8px;
+    }
+    input {
+      padding: 0.75rem;
       font-size: 1rem;
-      color: white;
-      background: rgba(255, 255, 255, 0.1);
-      border: 1px solid white;
+      border: none;
       border-radius: 4px;
-      text-decoration: none;
+    }
+    button {
+      padding: 0.75rem;
+      font-size: 1rem;
+      border: none;
+      border-radius: 4px;
+      background-color: white;
+      color: black;
+      cursor: pointer;
       transition: background 0.3s;
     }
-    a.button:hover {
-      background: rgba(255, 255, 255, 0.3);
+    button:hover {
+      background-color: #ccc;
     }
   </style>
 </head>
 <body>
-  <h1>TSHLA.ai</h1>
-  <a class="button" href="login.html">Login</a>
+  <h2>Welcome to TSHLA.ai</h2>
+  <form>
+    <input type="email" placeholder="Email" required />
+    <input type="password" placeholder="Password" required />
+    <button type="submit">Login</button>
+  </form>
 </body>
 </html>
