--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -18,12 +17,16 @@
       align-items: center;
       justify-content: center;
       height: 100vh;
+      padding: 1rem;
+      text-align: center;
       text-shadow: 0 0 10px rgba(0,0,0,0.7);
     }
+
     h1 {
-      font-size: 3rem;
+      font-size: clamp(2rem, 8vw, 4rem);
       margin-bottom: 1rem;
     }
+
     a.button {
       padding: 0.75rem 2rem;
       font-size: 1rem;
@@ -34,6 +37,7 @@
       text-decoration: none;
       transition: background 0.3s;
     }
+
     a.button:hover {
       background: rgba(255, 255, 255, 0.3);
     }
