--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
   <title>TSHLA.ai</title>
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;600&display=swap" rel="stylesheet">
   <style>
+    * {
+      box-sizing: border-box;
+    }
     body {
       margin: 0;
+      padding: 0;
       font-family: 'Space Grotesk', sans-serif;
       background: url('bg.jpg') no-repeat center center fixed;
       background-size: cover;
@@ -16,15 +20,15 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      height: 100vh;
-      padding: 1rem;
+      min-height: 100vh;
       text-align: center;
       text-shadow: 0 0 10px rgba(0,0,0,0.7);
     }
 
     h1 {
-      font-size: clamp(2rem, 8vw, 4rem);
-      margin-bottom: 1rem;
+      font-size: clamp(2rem, 6vw, 3.5rem);
+      margin-bottom: 2rem;
+      margin-top: 0;
     }
 
     a.button {
