--- a/index.html
+++ b/index.html
@@ -3,52 +3,78 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>TSHLA.ai</title>
+  <title>Login – TSHLA.ai</title>
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;600&display=swap" rel="stylesheet">
   <style>
     * {
       box-sizing: border-box;
     }
+
     body {
       margin: 0;
       padding: 0;
       font-family: 'Space Grotesk', sans-serif;
       background: url('bg.jpg') no-repeat center center fixed;
       background-size: cover;
-      color: white;
       display: flex;
-      flex-direction: column;
-      align-items: center;
       justify-content: center;
+      align-items: center;
       min-height: 100vh;
       text-align: center;
-      text-shadow: 0 0 10px rgba(0,0,0,0.7);
-    }
-
-    h1 {
-      font-size: clamp(2rem, 6vw, 3.5rem);
-      margin-bottom: 2rem;
-      margin-top: 0;
-    }
-
-    a.button {
-      padding: 0.75rem 2rem;
-      font-size: 1rem;
       color: white;
-      background: rgba(255, 255, 255, 0.1);
-      border: 1px solid white;
+      text-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
+    }
+
+    .login-container {
+      background: rgba(0, 0, 0, 0.5);
+      padding: 2rem;
+      border-radius: 8px;
+      max-width: 350px;
+      width: 90%;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.6);
+    }
+
+    h2 {
+      margin-bottom: 1.5rem;
+      font-size: 2rem;
+    }
+
+    input[type="text"],
+    input[type="password"] {
+      width: 100%;
+      padding: 0.75rem;
+      margin: 0.5rem 0 1rem;
+      border: none;
       border-radius: 4px;
-      text-decoration: none;
+      font-size: 1rem;
+    }
+
+    button {
+      width: 100%;
+      padding: 0.75rem;
+      background: white;
+      color: black;
+      font-weight: bold;
+      font-size: 1rem;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
       transition: background 0.3s;
     }
 
-    a.button:hover {
-      background: rgba(255, 255, 255, 0.3);
+    button:hover {
+      background: #ddd;
     }
   </style>
 </head>
 <body>
-  <h1>TSHLA.ai</h1>
-  <a class="button" href="login.html">Login</a>
+  <div class="login-container">
+    <h2>Login</h2>
+    <form>
+      <input type="text" placeholder="Username" required />
+      <input type="password" placeholder="Password" required />
+      <button type="submit">Enter</button>
+    </form>
+  </div>
 </body>
 </html>
