--- a/index.html
+++ b/index.html
@@ -3,78 +3,65 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Login – TSHLA.ai</title>
+  <title>TSHLA.ai</title>
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;600&display=swap" rel="stylesheet">
   <style>
     * {
       box-sizing: border-box;
     }
 
-    body {
+    html, body {
       margin: 0;
       padding: 0;
+      height: 100%;
       font-family: 'Space Grotesk', sans-serif;
       background: url('bg.jpg') no-repeat center center fixed;
       background-size: cover;
+      color: white;
+      text-align: center;
+      text-shadow: 0 0 10px rgba(0,0,0,0.7);
+    }
+
+    .container {
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
-      min-height: 100vh;
-      text-align: center;
-      color: white;
-      text-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
-    }
-
-    .login-container {
-      background: rgba(0, 0, 0, 0.5);
+      height: 100vh;
       padding: 2rem;
-      border-radius: 8px;
-      max-width: 350px;
-      width: 90%;
-      box-shadow: 0 0 20px rgba(0, 0, 0, 0.6);
     }
 
-    h2 {
-      margin-bottom: 1.5rem;
-      font-size: 2rem;
+    h1 {
+      font-size: clamp(2rem, 6vw, 3.5rem);
+      margin: 0 0 2rem 0;
+      animation: fadeIn 1.5s ease-out;
     }
 
-    input[type="text"],
-    input[type="password"] {
-      width: 100%;
-      padding: 0.75rem;
-      margin: 0.5rem 0 1rem;
-      border: none;
-      border-radius: 4px;
+    a.button {
+      padding: 0.75rem 2rem;
       font-size: 1rem;
-    }
-
-    button {
-      width: 100%;
-      padding: 0.75rem;
-      background: white;
-      color: black;
-      font-weight: bold;
-      font-size: 1rem;
-      border: none;
+      color: white;
+      background: rgba(255, 255, 255, 0.1);
+      border: 1px solid white;
       border-radius: 4px;
-      cursor: pointer;
+      text-decoration: none;
       transition: background 0.3s;
     }
 
-    button:hover {
-      background: #ddd;
+    a.button:hover {
+      background: rgba(255, 255, 255, 0.3);
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(-20px); }
+      to { opacity: 1; transform: translateY(0); }
     }
   </style>
 </head>
 <body>
-  <div class="login-container">
-    <h2>Login</h2>
-    <form>
-      <input type="text" placeholder="Username" required />
-      <input type="password" placeholder="Password" required />
-      <button type="submit">Enter</button>
-    </form>
+  <div class="container">
+    <h1>TSHLA.ai</h1>
+    <a class="button" href="login.html">Login</a>
   </div>
 </body>
 </html>
