--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
   <style>
     * {
       box-sizing: border-box;
+      margin: 0;
+      padding: 0;
     }
 
     html, body {
-      margin: 0;
-      padding: 0;
       height: 100%;
       font-family: 'Space Grotesk', sans-serif;
       background: url('bg.jpg') no-repeat center center fixed;
       background-size: cover;
       color: white;
       text-align: center;
-      text-shadow: 0 0 10px rgba(0,0,0,0.7);
+      text-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
     }
 
     .container {
@@ -27,18 +27,18 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      height: 100vh;
-      padding: 2rem;
+      min-height: 100svh;
+      padding: 2rem 1rem;
     }
 
     h1 {
-      font-size: clamp(2rem, 6vw, 3.5rem);
-      margin: 0 0 2rem 0;
+      font-size: clamp(1.8rem, 5vw, 2.8rem);
+      margin-bottom: 2rem;
       animation: fadeIn 1.5s ease-out;
     }
 
     a.button {
-      padding: 0.75rem 2rem;
+      padding: 0.65rem 1.5rem;
       font-size: 1rem;
       color: white;
       background: rgba(255, 255, 255, 0.1);
