--- a/index.html
+++ b/index.html
@@ -19,10 +19,21 @@
       background-size: cover;
       color: white;
       text-align: center;
-      text-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
+      position: relative;
+    }
+
+    /* bluish overlay */
+    body::before {
+      content: '';
+      position: absolute;
+      inset: 0;
+      background: rgba(40, 80, 160, 0.3); /* bluish overlay */
+      z-index: 0;
     }
 
     .container {
+      position: relative;
+      z-index: 1;
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -32,9 +43,9 @@
     }
 
     h1 {
-      font-size: clamp(1.8rem, 5vw, 2.8rem);
+      font-size: clamp(2rem, 5vw, 3rem);
       margin-bottom: 2rem;
-      animation: fadeIn 1.5s ease-out;
+      animation: fadeIn 1.2s ease-out;
     }
 
     a.button {
@@ -60,7 +71,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>TSHLA.ai</h1>
+    <h1>TSHLA</h1>
     <a class="button" href="login.html">Login</a>
   </div>
 </body>
