--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>TSHLA.ai</title>
-  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
     * {
       box-sizing: border-box;
@@ -14,7 +14,7 @@
 
     html, body {
       height: 100%;
-      font-family: 'Space Grotesk', sans-serif;
+      font-family: 'Inter', sans-serif;
       background: url('bg.jpg') no-repeat center center fixed;
       background-size: cover;
       color: white;
@@ -22,7 +22,6 @@
       position: relative;
     }
 
-    /* bluish overlay */
     body::before {
       content: '';
       position: absolute;
@@ -39,32 +38,33 @@
       justify-content: center;
       align-items: center;
       min-height: 100svh;
-      padding: 2rem 1rem;
+      padding: 2rem;
     }
 
     h1 {
-      font-size: clamp(2rem, 5vw, 3rem);
+      font-size: clamp(1.8rem, 4vw, 2.5rem);
+      font-weight: 600;
       margin-bottom: 2rem;
       animation: fadeIn 1.2s ease-out;
     }
 
     a.button {
-      padding: 0.65rem 1.5rem;
-      font-size: 1rem;
+      padding: 0.6rem 1.2rem;
+      font-size: 0.95rem;
       color: white;
       background: rgba(255, 255, 255, 0.1);
       border: 1px solid white;
-      border-radius: 4px;
+      border-radius: 6px;
       text-decoration: none;
       transition: background 0.3s;
     }
 
     a.button:hover {
-      background: rgba(255, 255, 255, 0.3);
+      background: rgba(255, 255, 255, 0.25);
     }
 
     @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(-20px); }
+      from { opacity: 0; transform: translateY(-10px); }
       to { opacity: 1; transform: translateY(0); }
     }
   </style>
