--- a/login.html
+++ b/login.html
@@ -1,64 +1,91 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Login | TSHLA.ai</title>
-  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;600&display=swap" rel="stylesheet">
+  <title>Login - TSHLA.ai</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    body {
+    * {
+      box-sizing: border-box;
       margin: 0;
-      font-family: 'Space Grotesk', sans-serif;
+      padding: 0;
+    }
+
+    html, body {
+      height: 100%;
+      font-family: 'Inter', sans-serif;
       background: url('bg.jpg') no-repeat center center fixed;
       background-size: cover;
       color: white;
+      text-align: center;
+      position: relative;
+    }
+
+    body::before {
+      content: '';
+      position: absolute;
+      inset: 0;
+      background: rgba(40, 80, 160, 0.4);
+      z-index: 0;
+    }
+
+    .container {
+      position: relative;
+      z-index: 1;
       display: flex;
       flex-direction: column;
-      align-items: center;
       justify-content: center;
-      height: 100vh;
-      text-shadow: 0 0 10px rgba(0,0,0,0.7);
-    }
-    h2 {
-      margin-bottom: 1rem;
-      font-size: 2rem;
-    }
-    form {
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-      background: rgba(0,0,0,0.4);
+      align-items: center;
+      min-height: 100svh;
       padding: 2rem;
+    }
+
+    h1 {
+      font-size: clamp(1.6rem, 4vw, 2.4rem);
+      margin-bottom: 2rem;
+    }
+
+    .login-box {
+      background: rgba(255, 255, 255, 0.1);
+      padding: 1rem 2rem;
       border-radius: 8px;
+      border: 1px solid white;
     }
-    input {
-      padding: 0.75rem;
+
+    .login-box input {
+      margin: 0.5rem 0;
+      padding: 0.5rem;
+      width: 200px;
       font-size: 1rem;
       border: none;
       border-radius: 4px;
     }
-    button {
-      padding: 0.75rem;
+
+    .login-box button {
+      margin-top: 1rem;
+      padding: 0.5rem 1.2rem;
       font-size: 1rem;
+      background: white;
+      color: #284fa0;
       border: none;
       border-radius: 4px;
-      background-color: white;
-      color: black;
       cursor: pointer;
-      transition: background 0.3s;
     }
-    button:hover {
-      background-color: #ccc;
+
+    .login-box button:hover {
+      background: #e0e0ff;
     }
   </style>
 </head>
 <body>
-  <h2>Welcome to TSHLA.ai</h2>
-  <form>
-    <input type="email" placeholder="Email" required />
-    <input type="password" placeholder="Password" required />
-    <button type="submit">Login</button>
-  </form>
+  <div class="container">
+    <h1>TSHLA</h1>
+    <div class="login-box">
+      <input type="email" placeholder="Email" /><br />
+      <input type="password" placeholder="Password" /><br />
+      <button>Login</button>
+    </div>
+  </div>
 </body>
 </html>
