--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
       content: '';
       position: absolute;
       inset: 0;
-      background: rgba(40, 80, 160, 0.4);
+      background: rgba(40, 80, 160, 0.35); /* bluish overlay */
       z-index: 0;
     }
 
@@ -37,39 +37,44 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      min-height: 100svh;
+      min-height: 100vh;
       padding: 2rem;
     }
 
     h1 {
-      font-size: clamp(1.6rem, 4vw, 2.4rem);
-      margin-bottom: 2rem;
+      font-size: clamp(1.5rem, 4vw, 2.2rem);
+      font-weight: 600;
+      margin-bottom: 1.5rem;
     }
 
     .login-box {
       background: rgba(255, 255, 255, 0.1);
-      padding: 1rem 2rem;
-      border-radius: 8px;
+      padding: 2rem;
+      border-radius: 10px;
       border: 1px solid white;
+      backdrop-filter: blur(6px);
+      width: 100%;
+      max-width: 300px;
     }
 
     .login-box input {
       margin: 0.5rem 0;
-      padding: 0.5rem;
-      width: 200px;
-      font-size: 1rem;
+      padding: 0.6rem;
+      width: 100%;
+      font-size: 0.95rem;
       border: none;
-      border-radius: 4px;
+      border-radius: 5px;
     }
 
     .login-box button {
       margin-top: 1rem;
-      padding: 0.5rem 1.2rem;
+      padding: 0.6rem 1rem;
+      width: 100%;
       font-size: 1rem;
       background: white;
       color: #284fa0;
       border: none;
-      border-radius: 4px;
+      border-radius: 5px;
       cursor: pointer;
     }
 
