--- a/login.html
+++ b/login.html
@@ -18,63 +18,60 @@
       background: url('bg.jpg') no-repeat center center fixed;
       background-size: cover;
       color: white;
-      text-align: center;
-      position: relative;
     }
 
     body::before {
       content: '';
-      position: absolute;
-      inset: 0;
-      background: rgba(40, 80, 160, 0.35); /* bluish overlay */
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(40, 80, 160, 0.35);
       z-index: 0;
     }
 
-    .container {
+    .wrapper {
       position: relative;
       z-index: 1;
+      padding-top: 15vh;
       display: flex;
       flex-direction: column;
-      justify-content: center;
       align-items: center;
-      min-height: 100vh;
-      padding: 2rem;
     }
 
     h1 {
-      font-size: clamp(1.5rem, 4vw, 2.2rem);
-      font-weight: 600;
-      margin-bottom: 1.5rem;
+      font-size: 2rem;
+      margin-bottom: 2rem;
     }
 
     .login-box {
       background: rgba(255, 255, 255, 0.1);
-      padding: 2rem;
+      padding: 1.5rem;
       border-radius: 10px;
       border: 1px solid white;
       backdrop-filter: blur(6px);
-      width: 100%;
+      width: 90%;
       max-width: 300px;
     }
 
     .login-box input {
-      margin: 0.5rem 0;
+      margin-bottom: 1rem;
       padding: 0.6rem;
       width: 100%;
       font-size: 0.95rem;
       border: none;
-      border-radius: 5px;
+      border-radius: 4px;
     }
 
     .login-box button {
-      margin-top: 1rem;
-      padding: 0.6rem 1rem;
+      padding: 0.6rem;
       width: 100%;
       font-size: 1rem;
       background: white;
       color: #284fa0;
       border: none;
-      border-radius: 5px;
+      border-radius: 4px;
       cursor: pointer;
     }
 
@@ -84,11 +81,11 @@
   </style>
 </head>
 <body>
-  <div class="container">
+  <div class="wrapper">
     <h1>TSHLA</h1>
     <div class="login-box">
-      <input type="email" placeholder="Email" /><br />
-      <input type="password" placeholder="Password" /><br />
+      <input type="email" placeholder="Email" />
+      <input type="password" placeholder="Password" />
       <button>Login</button>
     </div>
   </div>
