--- a/index.html
+++ b/index.html
@@ -18,61 +18,57 @@
       background: url('bg.jpg') no-repeat center center fixed;
       background-size: cover;
       color: white;
-      text-align: center;
-      position: relative;
     }
 
     body::before {
       content: '';
-      position: absolute;
-      inset: 0;
-      background: rgba(40, 80, 160, 0.3); /* bluish overlay */
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(40, 80, 160, 0.35);
       z-index: 0;
     }
 
-    .container {
+    .centered {
       position: relative;
       z-index: 1;
       display: flex;
       flex-direction: column;
-      justify-content: center;
       align-items: center;
-      min-height: 100svh;
+      justify-content: center;
+      min-height: 100vh;
+      text-align: center;
       padding: 2rem;
     }
 
     h1 {
       font-size: clamp(1.8rem, 4vw, 2.5rem);
-      font-weight: 600;
       margin-bottom: 2rem;
-      animation: fadeIn 1.2s ease-out;
+      font-weight: 600;
     }
 
-    a.button {
-      padding: 0.6rem 1.2rem;
-      font-size: 0.95rem;
-      color: white;
-      background: rgba(255, 255, 255, 0.1);
-      border: 1px solid white;
+    a {
+      display: inline-block;
+      padding: 0.7rem 1.4rem;
+      background: white;
+      color: #284fa0;
       border-radius: 6px;
       text-decoration: none;
-      transition: background 0.3s;
+      font-size: 1rem;
+      font-weight: 500;
     }
 
-    a.button:hover {
-      background: rgba(255, 255, 255, 0.25);
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(-10px); }
-      to { opacity: 1; transform: translateY(0); }
+    a:hover {
+      background: #e0e0ff;
     }
   </style>
 </head>
 <body>
-  <div class="container">
+  <div class="centered">
     <h1>TSHLA</h1>
-    <a class="button" href="login.html">Login</a>
+    <a href="login.html">Login</a>
   </div>
 </body>
 </html>
