--- a/index.html
+++ b/index.html
@@ -6,12 +6,7 @@
   <title>TSHLA.ai</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-
+    * { box-sizing: border-box; margin: 0; padding: 0; }
     html, body {
       height: 100%;
       font-family: 'Inter', sans-serif;
@@ -19,47 +14,37 @@
       background-size: cover;
       color: white;
     }
-
     body::before {
       content: '';
       position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
+      inset: 0;
       background: rgba(40, 80, 160, 0.35);
       z-index: 0;
     }
-
     .centered {
       position: relative;
       z-index: 1;
       display: flex;
       flex-direction: column;
-      align-items: center;
       justify-content: center;
+      align-items: center;
       min-height: 100vh;
-      text-align: center;
       padding: 2rem;
+      text-align: center;
     }
-
     h1 {
-      font-size: clamp(1.8rem, 4vw, 2.4rem);
-      margin-bottom: 2rem;
+      font-size: 2.2rem;
       font-weight: 600;
+      margin-bottom: 2rem;
     }
-
     a {
-      display: inline-block;
       padding: 0.7rem 1.4rem;
       background: white;
       color: #284fa0;
-      border-radius: 6px;
       text-decoration: none;
-      font-size: 1rem;
+      border-radius: 6px;
       font-weight: 500;
     }
-
     a:hover {
       background: #e0e0ff;
     }
