--- a/login.html
+++ b/login.html
@@ -3,15 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Login - TSHLA.ai</title>
+  <title>Login - TSHLA</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-
+    * { box-sizing: border-box; margin: 0; padding: 0; }
     html, body {
       height: 100%;
       font-family: 'Inter', sans-serif;
@@ -19,75 +14,58 @@
       background-size: cover;
       color: white;
     }
-
     body::before {
       content: '';
       position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
+      inset: 0;
       background: rgba(40, 80, 160, 0.35);
       z-index: 0;
     }
-
-    .wrapper {
+    .login-container {
       position: relative;
       z-index: 1;
-      padding-top: 15vh;
       display: flex;
       flex-direction: column;
       align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      padding: 2rem;
     }
-
-    h1 {
+    h2 {
       font-size: 2rem;
-      margin-bottom: 2rem;
+      margin-bottom: 1.5rem;
     }
-
-    .login-box {
-      background: rgba(255, 255, 255, 0.1);
-      padding: 1.5rem;
-      border-radius: 10px;
-      border: 1px solid white;
-      backdrop-filter: blur(6px);
-      width: 90%;
-      max-width: 300px;
-    }
-
-    .login-box input {
-      margin-bottom: 1rem;
-      padding: 0.6rem;
-      width: 100%;
-      font-size: 0.95rem;
+    input {
+      padding: 0.75rem 1rem;
+      margin: 0.5rem 0;
       border: none;
       border-radius: 4px;
-    }
-
-    .login-box button {
-      padding: 0.6rem;
       width: 100%;
+      max-width: 300px;
       font-size: 1rem;
-      background: white;
+    }
+    button {
+      margin-top: 1rem;
+      padding: 0.75rem 1.5rem;
+      font-size: 1rem;
+      font-weight: 500;
+      background-color: white;
       color: #284fa0;
       border: none;
-      border-radius: 4px;
+      border-radius: 6px;
       cursor: pointer;
     }
-
-    .login-box button:hover {
+    button:hover {
       background: #e0e0ff;
     }
   </style>
 </head>
 <body>
-  <div class="wrapper">
-    <h1>TSHLA</h1>
-    <div class="login-box">
-      <input type="email" placeholder="Email" />
-      <input type="password" placeholder="Password" />
-      <button>Login</button>
-    </div>
+  <div class="login-container">
+    <h2>Login</h2>
+    <input type="text" placeholder="Email" />
+    <input type="password" placeholder="Password" />
+    <button>Login</button>
   </div>
 </body>
 </html>
