--- a/login.html
+++ b/login.html
@@ -10,8 +10,7 @@
     html, body {
       height: 100%;
       font-family: 'Inter', sans-serif;
-      background: url('bg.jpg') no-repeat center center fixed;
-      background-size: cover;
+      background-color: white;
       color: white;
     }
     body::before {
