--- a/login.html
+++ b/login.html
@@ -4,64 +4,72 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Login - TSHLA</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    * { box-sizing: border-box; margin: 0; padding: 0; }
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+
     html, body {
       height: 100%;
-      font-family: 'Inter', sans-serif;
       background-color: white;
-      color: white;
-    }
-    body::before {
-      content: '';
-      position: fixed;
-      inset: 0;
-      background: rgba(40, 80, 160, 0.35);
-      z-index: 0;
-    }
-    .login-container {
-      position: relative;
-      z-index: 1;
+      font-family: 'Poppins', sans-serif;
       display: flex;
-      flex-direction: column;
-      align-items: center;
       justify-content: center;
-      min-height: 100vh;
+      align-items: center;
+      color: #333;
+    }
+
+    .login-container {
+      text-align: center;
       padding: 2rem;
+      border-radius: 8px;
+      box-shadow: 0 8px 30px rgba(0, 0, 0, 0.1);
+      background-color: #ffffff;
+      width: 100%;
+      max-width: 360px;
     }
+
     h2 {
-      font-size: 2rem;
+      font-size: 1.8rem;
       margin-bottom: 1.5rem;
+      font-weight: 600;
+      color: #284fa0;
     }
+
     input {
+      width: 100%;
       padding: 0.75rem 1rem;
       margin: 0.5rem 0;
-      border: none;
-      border-radius: 4px;
-      width: 100%;
-      max-width: 300px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
       font-size: 1rem;
     }
+
     button {
+      width: 100%;
+      padding: 0.75rem;
       margin-top: 1rem;
-      padding: 0.75rem 1.5rem;
       font-size: 1rem;
-      font-weight: 500;
-      background-color: white;
-      color: #284fa0;
+      font-weight: 600;
+      color: white;
+      background-color: #284fa0;
       border: none;
       border-radius: 6px;
       cursor: pointer;
+      transition: background-color 0.2s ease;
     }
+
     button:hover {
-      background: #e0e0ff;
+      background-color: #3b61c1;
     }
   </style>
 </head>
 <body>
   <div class="login-container">
-    <h2>Login</h2>
+    <h2>Login to TSHLA</h2>
     <input type="text" placeholder="Email" />
     <input type="password" placeholder="Password" />
     <button>Login</button>
