--- a/login.html
+++ b/login.html
@@ -2,77 +2,128 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Login - TSHLA</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>TSHLA Login</title>
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet">
   <style>
-    * {
-      box-sizing: border-box;
+    body {
       margin: 0;
-      padding: 0;
-    }
-
-    html, body {
-      height: 100%;
-      background-color: white;
-      font-family: 'Poppins', sans-serif;
+      font-family: 'DM Sans', sans-serif;
+      background-color: #f9f9f9;
       display: flex;
-      justify-content: center;
+      flex-direction: column;
       align-items: center;
-      color: #333;
+      justify-content: center;
+      height: 100vh;
+      overflow: hidden;
+      animation: fadeIn 1s ease-in;
     }
 
-    .login-container {
-      text-align: center;
-      padding: 2rem;
-      border-radius: 8px;
-      box-shadow: 0 8px 30px rgba(0, 0, 0, 0.1);
-      background-color: #ffffff;
-      width: 100%;
-      max-width: 360px;
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
     }
 
-    h2 {
-      font-size: 1.8rem;
-      margin-bottom: 1.5rem;
-      font-weight: 600;
-      color: #284fa0;
+    h1 {
+      font-size: 3rem;
+      margin-bottom: 2rem;
+      font-weight: 700;
+      color: #000;
     }
 
-    input {
-      width: 100%;
-      padding: 0.75rem 1rem;
-      margin: 0.5rem 0;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-      font-size: 1rem;
+    .input-group {
+      display: flex;
+      flex-direction: column;
+      width: 300px;
+      gap: 1.5rem;
     }
 
-    button {
-      width: 100%;
-      padding: 0.75rem;
-      margin-top: 1rem;
-      font-size: 1rem;
-      font-weight: 600;
-      color: white;
-      background-color: #284fa0;
+    input[type="email"],
+    input[type="text"] {
       border: none;
-      border-radius: 6px;
-      cursor: pointer;
-      transition: background-color 0.2s ease;
+      border-bottom: 2px solid #ccc;
+      padding: 0.75rem 0;
+      font-size: 1rem;
+      background: transparent;
+      transition: border-color 0.3s;
     }
 
-    button:hover {
-      background-color: #3b61c1;
+    input:focus {
+      outline: none;
+      border-color: #000;
+    }
+
+    .roles {
+      display: flex;
+      justify-content: space-between;
+    }
+
+    .role-btn {
+      flex: 1;
+      text-align: center;
+      padding: 0.75rem 1rem;
+      border: 1px solid #ccc;
+      margin: 0 0.25rem;
+      border-radius: 9999px;
+      cursor: pointer;
+      transition: all 0.3s;
+      background: white;
+    }
+
+    .role-btn.selected {
+      background: black;
+      color: white;
+      border-color: black;
+    }
+
+    .login-btn {
+      margin-top: 2rem;
+      padding: 0.75rem;
+      background-color: black;
+      color: white;
+      border: none;
+      border-radius: 9999px;
+      cursor: pointer;
+      font-size: 1rem;
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+    }
+
+    .login-btn:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+    }
+
+    .footer {
+      margin-top: 3rem;
+      font-size: 0.85rem;
+      color: #888;
     }
   </style>
 </head>
 <body>
-  <div class="login-container">
-    <h2>Login to TSHLA</h2>
-    <input type="text" placeholder="Email" />
-    <input type="password" placeholder="Password" />
-    <button>Login</button>
+  <h1>TSHLA</h1>
+  <div class="input-group">
+    <input type="email" placeholder="Your Email" />
+
+    <div class="roles">
+      <div class="role-btn selected" onclick="selectRole(this)">Driver</div>
+      <div class="role-btn" onclick="selectRole(this)">Passenger</div>
+    </div>
+
+    <input type="text" placeholder="Enter your Drive Code" />
+
+    <button class="login-btn">Login →</button>
   </div>
+
+  <div class="footer">
+    An AI-powered clinical system for those who know where they're going.
+  </div>
+
+  <script>
+    function selectRole(element) {
+      document.querySelectorAll('.role-btn').forEach(btn => btn.classList.remove('selected'));
+      element.classList.add('selected');
+    }
+  </script>
 </body>
 </html>
