--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>TSHLA Login</title>
+  <title>TSHLA Engage</title>
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
@@ -26,7 +26,7 @@
 
     h1 {
       font-size: 3rem;
-      margin-bottom: 2rem;
+      margin-bottom: 2.5rem;
       font-weight: 700;
       color: #000;
     }
@@ -35,88 +35,87 @@
       display: flex;
       flex-direction: column;
       width: 300px;
-      gap: 1.5rem;
-    }
-
-    input[type="email"],
-    input[type="text"] {
-      border: none;
-      border-bottom: 2px solid #ccc;
-      padding: 0.75rem 0;
-      font-size: 1rem;
-      background: transparent;
-      transition: border-color 0.3s;
-    }
-
-    input:focus {
-      outline: none;
-      border-color: #000;
+      gap: 2rem;
+      align-items: center;
     }
 
     .roles {
       display: flex;
       justify-content: space-between;
+      width: 100%;
     }
 
     .role-btn {
       flex: 1;
       text-align: center;
       padding: 0.75rem 1rem;
-      border: 1px solid #ccc;
+      border: 2px solid #bde0fe;
       margin: 0 0.25rem;
       border-radius: 9999px;
       cursor: pointer;
+      font-weight: 600;
+      color: #0077b6;
+      background: #e0f7ff;
       transition: all 0.3s;
-      background: white;
+    }
+
+    .role-btn:hover {
+      background: #caf0f8;
     }
 
     .role-btn.selected {
-      background: black;
-      color: white;
-      border-color: black;
+      background: #90e0ef;
+      border-color: #0077b6;
+      color: #03045e;
     }
 
-    .login-btn {
-      margin-top: 2rem;
-      padding: 0.75rem;
-      background-color: black;
+    .code-input {
+      border: none;
+      border-bottom: 2px solid #ccc;
+      padding: 0.75rem 0;
+      font-size: 1rem;
+      width: 100%;
+      background: transparent;
+      transition: border-color 0.3s;
+      text-align: center;
+    }
+
+    .code-input:focus {
+      outline: none;
+      border-color: #0077b6;
+    }
+
+    .engage-btn {
+      margin-top: 1rem;
+      padding: 0.75rem 1.5rem;
+      background-color: #0077b6;
       color: white;
       border: none;
       border-radius: 9999px;
       cursor: pointer;
       font-size: 1rem;
-      transition: transform 0.2s ease, box-shadow 0.2s ease;
+      font-weight: 600;
+      transition: transform 0.2s ease, box-shadow 0.2s ease, background-color 0.3s;
     }
 
-    .login-btn:hover {
+    .engage-btn:hover {
       transform: translateY(-2px);
+      background-color: #023e8a;
       box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
-    }
-
-    .footer {
-      margin-top: 3rem;
-      font-size: 0.85rem;
-      color: #888;
     }
   </style>
 </head>
 <body>
   <h1>TSHLA</h1>
   <div class="input-group">
-    <input type="email" placeholder="Your Email" />
-
     <div class="roles">
       <div class="role-btn selected" onclick="selectRole(this)">Driver</div>
       <div class="role-btn" onclick="selectRole(this)">Passenger</div>
     </div>
 
-    <input type="text" placeholder="Enter your Drive Code" />
+    <input class="code-input" type="text" placeholder="Enter your Drive Code" />
 
-    <button class="login-btn">Login →</button>
-  </div>
-
-  <div class="footer">
-    An AI-powered clinical system for those who know where they're going.
+    <button class="engage-btn">Engage →</button>
   </div>
 
   <script>
