--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>TSHLA Engage</title>
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Pacifico&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
@@ -25,10 +25,11 @@
     }
 
     h1 {
+      font-family: 'Pacifico', cursive;
       font-size: 3rem;
       margin-bottom: 2.5rem;
-      font-weight: 700;
-      color: #000;
+      font-weight: 400;
+      color: #ff6b6b;
     }
 
     .input-group {
