--- a/login.html
+++ b/login.html
@@ -116,13 +116,27 @@
 
     <input class="code-input" type="text" placeholder="Enter your Drive Code" />
 
-    <button class="engage-btn">Engage →</button>
+    <button class="engage-btn" onclick="handleEngage()">Engage →</button>
   </div>
 
   <script>
     function selectRole(element) {
       document.querySelectorAll('.role-btn').forEach(btn => btn.classList.remove('selected'));
       element.classList.add('selected');
+    }
+
+    function handleEngage() {
+      const selectedRoleElement = document.querySelector('.role-btn.selected');
+      if (!selectedRoleElement) return;
+      const selectedRole = selectedRoleElement.innerText.trim().toLowerCase();
+
+      if (selectedRole === 'driver') {
+        window.location.href = 'driver.html';
+      } else if (selectedRole === 'passenger') {
+        window.location.href = 'passenger.html';
+      } else {
+        alert('Please select a role');
+      }
     }
   </script>
 </body>
